DATA-10 Nerdfonts alignment fix

--- a/public/assets/css/application.css
+++ b/public/assets/css/application.css
@@ -53,5 +53,5 @@ body::-webkit-scrollbar
     align-items: center;
     vertical-align: middle;
     line-height: 1;
-    margin-bottom: 3px;
+    margin-bottom: 0px;
 }
